# lavoisier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  README_BUHERA.md  analysis_plan.md  demo_buhera.py  docker-compose.yml  how HEADREADME.md  justfile  makefile  mass-spectrometry.aux  mass-spectrometry.fdb_latexmk  mass-spectrometry.fls  mass-spectrometry.md  mass-spectrometry.out  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.sh  run_union_pipeline.py  run_validation_pipeline.py  rust-toolchain.toml  setup.cfg  setup_rust.py  test_imports.py  visualize_validation_results.py
lavoisier-buhera/: Cargo.toml
lavoisier-buhera/benches/: parser_benchmark.rs
lavoisier-buhera/src/: ast.rs  errors.rs  evidence_network.rs  executor.rs  knowledge_distillation.rs  lib.rs  objectives.rs  parser.rs  python_bridge.rs  validator.rs
lavoisier-computational/: Cargo.toml
lavoisier-computational/src/: bayesian_optimization.rs  evidence_network.rs  hardware.rs  hardware_validation.rs  lib.rs  molecular_simulation.rs  noise_modeling.rs  resonance.rs  simulation.rs  trajectory_optimization.rs
lavoisier-core/: Cargo.toml
lavoisier-core/benches/: spectrum_processing.rs
lavoisier-core/src/: errors.rs  lib.rs  memory.rs  peak.rs  processing.rs  spectrum.rs
lavoisier-io/: Cargo.toml
lavoisier-io/benches/: io_benchmark.rs
lavoisier-io/src/: compression.rs  indexing.rs  lib.rs  mzml.rs
lavoisier-mass-computing/: Cargo.toml
lavoisier-mass-computing/benches/: synthesis_benchmarks.rs  ternary_benchmarks.rs
lavoisier-mass-computing/src/: errors.rs  extractor.rs  lib.rs  lookup.rs  massscript.rs  partition.rs  python.rs  scoord.rs  ternary.rs
precursor/: .gitignore  ALL_BUGS_FIXED.md  ALL_VISUALIZATION_SCRIPTS_COMPLETE.md  CHANGELOG.md  COMPLETE_IMPORT_AUDIT.md  COMPUTER_VISION_IMPORT_FIX.md  COMPUTER_VISION_INTEGRATION.md  CORE_MODULES_DOCUMENTATION.md  CRITICAL_BUGS_FIXED.md  CV_AND_VECTOR_TRANSFORMATION_COMPLETE.md  CV_DROPLET_PARAMETERS_FIX.md  CV_MODULE_NOT_RUNNING_ROOT_CAUSE.md  DATABASE_FREE_TESTING.md  DUAL_MEMBRANE_COMPLEMENTARITY_MS.md  DUAL_MEMBRANE_INTEGRATION_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  FRAGMENTATION_STAGE_README.md  HOW_DROPLET_ANNOTATION_WORKS.md  IMPORT_AUDIT.md  IMPORT_FIXES_APPLIED.md  INSTALL.md  LICENSE  MANIFEST.in  METABOLOMICS_PIPELINE_README.md  PACKAGE_SUMMARY.md  PATH_FIX_SUMMARY.md  PIPELINE_FIXES_AND_TRAJECTORY_ANALYSIS.md  QUICKSTART.md  README.md  README_DATABASE_FREE.md  RUNTIME_BUGS_TO_FIX.md  VIRTUAL_DETECTOR_VISUALIZATIONS.md  VIRTUAL_INSTRUMENT_RESULTS_ANALYSIS.md  VIRTUAL_SIMPLIFIED_APPROACH.md  VIRTUAL_SPECTROMETRY_QUICKSTART.md  VISUALIZATION_GUIDE.md  activate_and_run.cmd  analyze_existing_validation_results.py  demo_database_free_proteomics.py  pyproject.toml  (+31 more)
precursor/docs/catalysis/: categorical-catalysis-mechanism.aux  categorical-catalysis-mechanism.bbl  categorical-catalysis-mechanism.blg  categorical-catalysis-mechanism.out  categorical-catalysis-mechanism.toc
precursor/docs/categorical-current-flow/: geometric-transformations-current-derivation.aux  geometric-transformations-current-derivation.bbl  geometric-transformations-current-derivation.blg  geometric-transformations-current-derivation.out  geometric-transformations-current-derivation.toc
precursor/docs/categorical-fluid-dynamics/: fluid-dynamics-arxiv.bbl  fluid-dynamics-geometric-transformation.aux  fluid-dynamics-geometric-transformation.bbl  fluid-dynamics-geometric-transformation.blg  fluid-dynamics-geometric-transformation.out  fluid-dynamics-geometric-transformation.toc
precursor/docs/categorical-memory/: molecular-dynamics-categorical-memory.out
precursor/docs/categorical-partitioning/: categorical-partitioning-mechanisms.out
precursor/docs/ideal-gas-laws/: reformulation-of-ideal-gas-laws.out
precursor/docs/information-catalysts/: information-catalysts-mass-spectrometry.tex  references.bib
precursor/docs/mass-partitioning/: hardware-oscillation-categorical-mass-partitioning.aux  hardware-oscillation-categorical-mass-partitioning.blg  hardware-oscillation-categorical-mass-partitioning.out  hardware-oscillation-categorical-mass-partitioning.tex  references.bib
precursor/docs/poincare-computing/: poincare-categorical-computing.aux  poincare-categorical-computing.bbl  poincare-categorical-computing.blg  poincare-categorical-computing.out  poincare-categorical-computing.toc
precursor/docs/quantupartite-virtual-microscopy/: quantupartite-virtual-imaging.tex  references.bib
precursor/docs/st_stellas_epistemology/: references.bib  st-stellas.tex
precursor/docs/ternary-representation/: ternary-unit-representation.aux  ternary-unit-representation.out  ternary-unit-representation.toc
precursor/docs/transport-dynamics/: transport-dynamics-partition-limits.out
precursor/docs/union-of-two-crowns/: figures.tex  generate_figures.py  union-of-two-crowns.tex
precursor/docs/virtual-systems/: references.bib  virtual-metabolomics-ensemble.aux  virtual-metabolomics-ensemble.blg  virtual-metabolomics-ensemble.out  virtual-metabolomics-ensemble.tex
precursor/publication/: CV_METHOD_DETAILED_EXPLANATION.md
precursor/publication/computer-vision/: VISUALIZATION_SCRIPTS_FIXED.md  VISUALIZATION_SCRIPTS_UPDATED.md  bijective-computer-vision-mass-spec.aux  bijective-computer-vision-mass-spec.blg  bijective-computer-vision-mass-spec.out  bijective-computer-vision-mass-spec.tex  fluid-dynamics.tex
precursor/publication/entropy-coordinates/: hardware-based-metabolomics-COMPLETE.tex  hardware-based-metabolomics.aux  hardware-based-metabolomics.blg  hardware-based-metabolomics.out  hardware-based-metabolomics.tex  hardware-based-oscillatory-metabolomics.aux  hardware-based-oscillatory-metabolomics.out  hardware-based-oscillatory-metabolomics.toc  revised-figures.tex
precursor/publication/faster/: molecular-spectroscopy-categorical-propagation.out
precursor/publication/fragmentation/: figures.tex  (+6 more)
precursor/src/: EXPERIMENT_LLM_README.md  __init__.py
(+973 files in other folders)
