[workspace]
members = [
    "lavoisier-core",
    "lavoisier-numerical",
    "lavoisier-visual",
    "lavoisier-io"
]

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"
polars = "0.33"
arrow = "50"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
byteorder = "1.5"
flate2 = "1.0"
lz4 = "1.24"
zstd = "0.13"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
simd-json = "0.13"
half = "2.3"
num-traits = "0.2"
num-complex = "0.4"
rustfft = "6.1"
nalgebra = "0.32"
sprs = "0.11"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
debug = true 