[metadata]
name = lavoisier
version = attr: lavoisier.__version__
description = Advanced LC-Mass Spectrometry Analysis with AI Integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kundaisachikonye/lavoisier
author = Kundai Sachikonye
author_email = kundai.f.sachikonye@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    scipy>=1.10.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
    scripts*

[options.entry_points]
console_scripts =
    lavoisier = lavoisier.cli.app:main
    lavoisier-wizard = lavoisier.cli.ui.wizard:main
    buhera = lavoisier.ai_modules.buhera_integration:cli_main

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    -ra
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    gpu: marks tests that require GPU
    network: marks tests that require network access

[coverage:run]
source = lavoisier
omit = 
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .tox

[mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[mypy-rdkit.*]
ignore_missing_imports = true

[mypy-pymzml.*]
ignore_missing_imports = true

[mypy-faiss.*]
ignore_missing_imports = true 