[package]
name = "lavoisier-buhera"
version = "0.1.0"
edition = "2021"
authors = ["Lavoisier Development Team"]
description = "Buhera: Surgical precision scripting language for mass spectrometry analysis"
license = "MIT"

[lib]
name = "lavoisier_buhera"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
# Local dependencies
lavoisier-core = { path = "../lavoisier-core" }

# Workspace dependencies
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# External dependencies not in workspace
nom = "7.1"
serde_yaml = "0.9"
indexmap = "2.0"
petgraph = "0.6"
statrs = "0.16"
walkdir = "2.0"
glob = "0.3"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.0"

[[bench]]
name = "parser_benchmark"
harness = false

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]
