[package]
name = "lavoisier-computational"
version = "0.1.0"
edition = "2021"
authors = ["Lavoisier Team"]
description = "High-performance computational modules for hardware harvesting and molecular simulation"

[lib]
name = "lavoisier_computational"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.4"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
rustfft = "6.1"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dependencies.lavoisier-core]
path = "../lavoisier-core"

[build-dependencies]
pyo3-build-config = "0.20"
