[package]
name = "lavoisier-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lavoisier_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "spectrum_processing"
harness = false

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]
acceleration = [] 