[package]
name = "lavoisier-io"
version = "0.1.0"
edition = "2021"

[lib]
name = "lavoisier_io"
crate-type = ["cdylib", "rlib"]

[dependencies]
lavoisier-core = { path = "../lavoisier-core" }
pyo3 = { workspace = true }
memmap2 = { workspace = true }
flate2 = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
quick-xml = "0.31"
base64 = "0.21"
regex = "1.10"
dashmap = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"] 