[package]
name = "lavoisier-mass-computing"
version = "0.1.0"
edition = "2021"
description = "Mass Computing: Ternary partition synthesis for mass spectrometry"
authors = ["Kundai Sachikonye"]
license = "MIT"

[lib]
name = "lavoisier_mass_computing"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies from workspace
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }

# Additional dependencies for mass computing
lazy_static = "1.4"
smallvec = { version = "1.11", features = ["serde"] }
arrayvec = "0.7"
hashbrown = "0.14"

# Internal crate dependency
lavoisier-core = { path = "../lavoisier-core", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.4"

[[bench]]
name = "ternary_benchmarks"
harness = false

[[bench]]
name = "synthesis_benchmarks"
harness = false

[features]
default = ["python-bindings", "core-integration"]
python-bindings = ["pyo3/extension-module", "numpy", "lavoisier-core"]
core-integration = ["lavoisier-core"]
simd = []  # Future SIMD optimizations
