[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lavoisier-precursor"
version = "1.0.0"
description = "Advanced mass spectrometry analysis with finite observer architecture and resonant computation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Lavoisier Project Team", email = "lavoisier@project.org" }]
keywords = [
    "mass-spectrometry",
    "metabolomics",
    "proteomics",
    "bioinformatics",
    "phase-lock",
    "s-entropy",
    "finite-observers",
    "resonant-computation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "pymzml>=2.5.0",
    "pyteomics>=4.5.0",
    "torch>=1.10.0",
    "transformers>=4.20.0",
    "opencv-python>=4.5.0",
    "pillow>=8.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "h5py>=3.1.0",
    "tables>=3.6.0",
    "statsmodels>=0.13.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
gpu = ["pynvml>=11.0.0"]
all = ["lavoisier-precursor[dev,gpu]"]

[project.urls]
Homepage = "https://github.com/lavoisier-project/precursor"
Documentation = "https://lavoisier-precursor.readthedocs.io"
Repository = "https://github.com/lavoisier-project/precursor"
"Bug Tracker" = "https://github.com/lavoisier-project/precursor/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
